Nota aclaratoria sobre descarga en formato Word.

--- a/TE/20250807DesarrolloPersonalModuloI2025Trimestre3.html
+++ b/TE/20250807DesarrolloPersonalModuloI2025Trimestre3.html
@@ -68,12 +68,12 @@
         <p>*el día de la semana se concreta en el intensivo.</p>
         <p>
             <strong style="color: mediumseagreen;">Aportación Económica Solidaria:</strong>
-            El Teléfono de la Esperanza es una Organización Sin Ánimo de Lucro y nuestros voluntarios desarrollan 
-            estos cursos de manera altruista y desinteresada. Para poder satisfacer los gastos que se derivan de 
-            la realización de estas actividades (por ejemplo, instalaciones, la comida del sábado, los materiales, etc.), 
-            invitamos a las personas participantes a efectuar una aportación económica en concepto de donativo, que 
-            nos permita garantizar unas condiciones adecuadas para el desarrollo de este curso. Dicho donativo, puede ser 
-            a partir de 150€. Las aportaciones son destinadas en su totalidad al funcionamiento del Teléfono 
+            El Teléfono de la Esperanza es una Organización Sin Ánimo de Lucro y nuestros voluntarios desarrollan
+            estos cursos de manera altruista y desinteresada. Para poder satisfacer los gastos que se derivan de
+            la realización de estas actividades (por ejemplo, instalaciones, la comida del sábado, los materiales, etc.),
+            invitamos a las personas participantes a efectuar una aportación económica en concepto de donativo, que
+            nos permita garantizar unas condiciones adecuadas para el desarrollo de este curso. Dicho donativo, puede ser
+            a partir de 150€. Las aportaciones son destinadas en su totalidad al funcionamiento del Teléfono
             de la Esperanza, las 24 horas del día, los 365 días del año.
         </p>
         <p>Muchas gracias por tu colaboración.</p>
@@ -88,9 +88,12 @@
                 <a href="mailto:albacete@telefonodelaesperanza.org" style="color: dodgerblue;">albacete@telefonodelaesperanza.org</a>
                 los siguientes documentos:
                 <ul>
-                    <li>Ficha de inscripción (solicitar por mail o
+                    <li>
+                        Ficha de inscripción (solicitar por mail o
                         <strong>descargar </strong>
                         <a href="https://docs.google.com/document/d/1cIzTl8a0_75XIsHunKiuA0QVerx-ytBW/edit?usp=sharing&ouid=109398326214633490453&rtpof=true&sd=true" style="color:dodgerblue">aquí</a>),
+                        <br><em style="color: gray;">Nota: Es posible que el documento no se vea bien en el navegador porque lo convierte Google Docs, pero si lo descargas como archivo Word (.doc), el formato se mantendrá correctamente.</em>
+                    </li>
                     <li>Foto</li>
                     <li>Resguardo del ingreso de la reserva: <strong>25€</strong> (no reembolsable)</li>
                 </ul>
