Últimas plazas en curso de desarrollo personal.

--- a/TE/20250807DesarrolloPersonalModuloI2025Trimestre3.html
+++ b/TE/20250807DesarrolloPersonalModuloI2025Trimestre3.html
@@ -15,6 +15,11 @@
             </span>
         </p>
         <p>
+            <span style="color: red; font-size: 125%;">
+                ¡ÚLTIMAS PLAZAS!
+            </span>
+        </p>
+        <p>
             Comenzamos un <strong style="color: mediumseagreen;">nuevo ciclo formativo para las personas interesadas en formarse para colaborar y ser voluntari@s del Teléfono de la Esperanza</strong>.
         </p>
         <p>
